# skills

skills/0x7466/coda-packs/: _meta.json
skills/0xjordansg-yolo/openclaw-aisa-us-stock-analyst/: _meta.json
skills/0xnagato/orchestrator/: _meta.json
skills/0xnyk/xint/: README.md  SKILL.md  _meta.json  package-lock.json  package.json  xint.ts
skills/0xrag/send-usdc/: _meta.json
skills/0xrikt/claw-werewolf-live/: _meta.json
skills/10madh/linkedin-bulk-connect/: _meta.json
skills/10xcoldleads/highlevel/: _meta.json
skills/10xcoldleads/maton/: _meta.json
skills/1991513ccie-png/visualization/: SKILL.md  _meta.json
skills/1999azzar/memory-cache/: _meta.json
skills/1999azzar/pihole-ctl/: _meta.json
skills/1999azzar/ui-designer-skill/: _meta.json
skills/1kalin/afrexai-board-meeting/: _meta.json
skills/1kalin/afrexai-data-migration/: _meta.json
skills/1kalin/afrexai-database-engineer/: _meta.json
skills/1kalin/afrexai-esg-reporting/: _meta.json
skills/1kalin/afrexai-fpa-engine/: _meta.json
skills/1kalin/afrexai-investment-engine/: _meta.json
skills/1kalin/afrexai-rate-strategy/: _meta.json
skills/1kalin/afrexai-stripe-production/: _meta.json
skills/1kalin/afrexai-support-operations/: _meta.json
skills/bowen31337/shield-agent/: README.md  SKILL.md  _meta.json  clawhub.json  pyproject.toml
skills/bowen31337/shield-agent/shield_agent/: __init__.py  attestation.py  cli.py  models.py  poc_scan.py  scanner.py
skills/bowen31337/shield-agent/tests/: test_attestation.py  test_cli.py  test_poc_scan.py  test_scanner.py
(+1513 files in other folders)
