[project]
name = "shield-agent"
version = "0.1.0"
description = "AI-powered DeFi security sentinel"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "web3>=7.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
analysis = [
    "slither-analyzer>=0.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
shield-agent = "shield_agent.cli:main"

[tool.setuptools.packages.find]
include = ["shield_agent*"]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"
